<resources>
    <string name="app_name">Ambulance Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_req">Enter name</string>
    <string name="phone_req">Enter phone number</string>
    <string name="start_req">Enter start time</string>
    <string name="end_req">Enter end time</string>
    <string name="day_req">Enter day</string>
    <string name="save_action">Save the Schedule</string>
    <string name="schedule">Schedule : </string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="edit_item">Edit this schedule</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="add_new_schedule">Add New Schedule</string>
    <string name="delete_question">Do you want to delete this schedule?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
</resources>